--- a/src/interns/jonathan-cordero/index.html
+++ b/src/interns/jonathan-cordero/index.html
@@ -22,26 +22,34 @@
       <section class="section-about">
         <div class="u-center-text">
           <h2 class="heading-secondary">ABOUT ME</h2>
+          <h3>
+            Phone: (516)-984-1296
+          </h3>
+          <h3>
+            Email: Cryptcur00101@protonmail.com
+          </h3>
         </div>
         <p>
           I am Jonathan Cordero. I have been in retail and the customer service
-          industry for many years. I really enjoyed working with people and
-          interacting with them, but I felt something was lacking in my career.
-          I wanted to do something different but wasn't sure what it was.
+          industry for many years. I really enjoyed working and interacting with
+          people, but I felt something was lacking in my career. I wanted to do
+          something different but wasn't sure what it was.
         </p>
         <br />
         <p>
           It wasn't until I came across a video about learning to code that I
-          knew what I wanted to do. Since then my curiosity became larger and I
-          wanted to learn more. I found a website that teaches you the basics
-          while you write out the code. Since then I've decided to self study
-          for a while before finding a school that accelarates the learning
-          process.
+          knew that is I wanted to do. Since then my curiosity for coding was
+          sparked and I wanted to learn more. I discovered a website that
+          teaches you the basics of writing code. After that I decided to self
+          study for a while before finding a school that accelarates the
+          learning process. That school was Fullstack Academy which I graduated
+          from in 2020.
         </p>
         <br />
         <p>
-          At this point I knew I had to go all in for a career change and do
-          something that helps me grow. My goal is to become a software engineer
+          I am all in and ready for a career change. I know working in the
+          software engineering field will help me grow as a person. My goal is
+          to become a senior software engineer.
         </p>
       </section>
     </main>
